fix: margin dark mode

--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -38,8 +38,4 @@
     margin-top: -10%;
 }
 
-.dark-mode-toggle {
-    *>path {
-        fill: red;
-    }
-}
+
