--- a/src/pages/SponsorUs/styles.scss
+++ b/src/pages/SponsorUs/styles.scss
@@ -1,7 +1,6 @@
 .sponsors-us {
     flex-direction: column;
     justify-content: center;
-    margin: 2% 0;
     padding-bottom: 2%;
     background-color: var(--background);
 
@@ -18,7 +17,6 @@
             font-size: 1.875rem;
             line-height: 1.5em;
             text-align: center;
-            margin: 2% auto auto auto;
             color: var(--text-color);
             font-weight: bolder;
             overflow: hidden;
